<?xml version="1.0"?>
<package>
  <name>spear_or_shield</name>
  <version>0.0.0</version>
  <description>The spear_or_shield package</description>

  <maintainer email="kina4147@etri.re.kr">kina4147</maintainer>


  <license>TODO</license>
 
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>message_generation</run_depend>
 
  <export>

  </export>
</package>
